--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
 plugins {
     id 'java'
     id 'io.quarkus'
+    id 'org.seasar.doma.compile' version '1.0.0'
 }
+
+def domaVersion = '2.29.0'
 
 repositories {
      mavenLocal()
@@ -13,10 +16,10 @@ dependencies {
     implementation 'io.quarkus:quarkus-jdbc-h2'
     implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
     implementation 'io.quarkus:quarkus-resteasy'
-    implementation "org.seasar.doma:doma:2.28.0"
+    implementation "org.seasar.doma:doma:$domaVersion"
     runtimeOnly 'com.h2database:h2:1.3.175'
 
-    annotationProcessor "org.seasar.doma:doma:2.28.0"
+    annotationProcessor "org.seasar.doma:doma:$domaVersion"
 
     testImplementation 'io.quarkus:quarkus-junit5'
     testImplementation 'io.rest-assured:rest-assured'
@@ -25,22 +28,9 @@ dependencies {
 group 'org.seasar.doma'
 version '1.0'
 
-ext.domaResources = ['doma.compile.config', 'META-INF/**/*.sql', 'META-INF/**/*.script']
-
-task copyDomaResources(type: Sync) {
-    from sourceSets.main.resources.srcDirs
-    into compileJava.destinationDir
-    include domaResources
-}
-
 compileJava {
-    dependsOn copyDomaResources
     options.encoding = 'UTF-8'
     options.compilerArgs << '-parameters'
-}
-
-processResources {
-    exclude domaResources
 }
 
 compileTestJava {
