--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ quarkus.datasource.password=
 quarkus.datasource.jdbc.url=jdbc:h2:mem:sample
 quarkus.datasource.jdbc.min-size=4
 quarkus.datasource.jdbc.max-size=16
+quarkus.package.type=fast-jar
