Use latest versions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.log.category."org.seasar.doma".level=DEBUG
+#quarkus.log.category."org.seasar.doma".level=DEBUG
 
 quarkus.datasource.db-kind=h2
 quarkus.datasource.username=sa
@@ -6,5 +6,7 @@ quarkus.datasource.password=
 quarkus.datasource.jdbc.url=jdbc:h2:mem:sample
 quarkus.datasource.jdbc.min-size=4
 quarkus.datasource.jdbc.max-size=16
+
+quarkus.doma.log.sql=true
 
 quarkus.package.type=fast-jar
