--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,6 @@ quarkus.datasource.jdbc.min-size=4
 quarkus.datasource.jdbc.max-size=16
 
 quarkus.doma.log.sql=true
+quarkus.doma.sql-load-script=import.sql
 
 quarkus.package.type=fast-jar
