--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,11 @@
-#quarkus.log.category."org.seasar.doma".level=DEBUG
-
-quarkus.datasource.db-kind=h2
-quarkus.datasource.username=sa
-quarkus.datasource.password=
-quarkus.datasource.jdbc.url=jdbc:h2:mem:sample
-quarkus.datasource.jdbc.min-size=4
-quarkus.datasource.jdbc.max-size=16
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=quarkus_test
+quarkus.datasource.password=quarkus_test
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost/quarkus_test
+quarkus.datasource.jdbc.max-size=8
+quarkus.datasource.jdbc.min-size=2
 
 quarkus.doma.log.sql=true
 quarkus.doma.sql-load-script=import.sql
 
-quarkus.package.type=fast-jar
+#quarkus.log.category."org.seasar.doma".level=DEBUG
