--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 def domaVersion = '2.37.0'
-def domaQuarkusVersion = '0.4.0'
+def domaQuarkusVersion = '0.5.0-SNAPSHOT'
 
 repositories {
     mavenLocal()
