--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,8 @@
 #Gradle properties
 #Sat Mar 21 21:09:31 JST 2020
-quarkusPluginVersion=1.6.0.Final
+domaVersion=2.38.0
+domaQuarkusVersion=1.0.0
+quarkusPluginVersion=1.6.1.Final
 quarkusPlatformArtifactId=quarkus-bom
-quarkusPlatformVersion=1.6.0.Final
+quarkusPlatformVersion=1.6.1.Final
 quarkusPlatformGroupId=io.quarkus
