Remove redundant versions

--- a/build.gradle
+++ b/build.gradle
@@ -9,15 +9,17 @@ repositories {
     mavenCentral()
 }
 
+def quarkusPlatformVersion = quarkusPluginVersion
+
 dependencies {
     annotationProcessor "org.seasar.doma:doma-processor:$domaVersion"
     implementation enforcedPlatform("io.quarkus:quarkus-bom:${quarkusPlatformVersion}")
-    implementation "io.quarkus:quarkus-jdbc-postgresql:${quarkusPlatformVersion}"
-    implementation "io.quarkus:quarkus-resteasy:${quarkusPlatformVersion}"
-    implementation "io.quarkus:quarkus-resteasy-jsonb:${quarkusPlatformVersion}"
+    implementation "io.quarkus:quarkus-jdbc-postgresql"
+    implementation "io.quarkus:quarkus-resteasy"
+    implementation "io.quarkus:quarkus-resteasy-jsonb"
     implementation "org.seasar.doma:doma-core:$domaVersion"
     implementation "org.seasar.doma:doma-quarkus-deployment:$domaQuarkusVersion"
-    testImplementation "io.quarkus:quarkus-junit5:${quarkusPlatformVersion}"
+    testImplementation "io.quarkus:quarkus-junit5"
     testImplementation "io.rest-assured:rest-assured:4.3.1"
 }
 
