--- a/build.gradle
+++ b/build.gradle
@@ -9,17 +9,15 @@ repositories {
     mavenCentral()
 }
 
-def quarkusPlatformVersion = quarkusPluginVersion
-
 dependencies {
     annotationProcessor "org.seasar.doma:doma-processor:$domaVersion"
-    implementation enforcedPlatform("io.quarkus:quarkus-bom:${quarkusPlatformVersion}")
-    implementation "io.quarkus:quarkus-jdbc-postgresql"
-    implementation "io.quarkus:quarkus-resteasy"
-    implementation "io.quarkus:quarkus-resteasy-jsonb"
+    implementation enforcedPlatform("io.quarkus:quarkus-bom:${quarkusVersion}")
+    implementation "io.quarkus:quarkus-jdbc-postgresql:${quarkusVersion}"
+    implementation "io.quarkus:quarkus-resteasy:${quarkusVersion}"
+    implementation "io.quarkus:quarkus-resteasy-jsonb:${quarkusVersion}"
     implementation "org.seasar.doma:doma-core:$domaVersion"
     implementation "org.seasar.doma:doma-quarkus-deployment:$domaQuarkusVersion"
-    testImplementation "io.quarkus:quarkus-junit5"
+    testImplementation "io.quarkus:quarkus-junit5:${quarkusVersion}"
     testImplementation "io.rest-assured:rest-assured:4.3.1"
 }
 
