--- a/settings.gradle
+++ b/settings.gradle
@@ -5,7 +5,7 @@ pluginManagement {
         gradlePluginPortal()
     }
     plugins {
-      id 'io.quarkus' version "${quarkusPluginVersion}"
+      id 'io.quarkus' version "${quarkusVersion}"
     }
 }
 rootProject.name='quarkus-sample'
