--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,6 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://localhost/quarkus_test
 quarkus.datasource.jdbc.max-size=8
 quarkus.datasource.jdbc.min-size=2
 
-quarkus.doma.log.sql=true
+quarkus.log.category."org.seasar.doma.jdbc.LogKind.SQL".level=DEBUG
+
 quarkus.doma.sql-load-script=import.sql
