--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=quarkus_test
-quarkus.datasource.password=quarkus_test
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost/quarkus_test
-quarkus.datasource.jdbc.max-size=8
-quarkus.datasource.jdbc.min-size=2
+%prod.quarkus.datasource.db-kind=postgresql
+%prod.quarkus.datasource.username=quarkus_test
+%prod.quarkus.datasource.password=quarkus_test
+%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost/quarkus_test
+%prod.quarkus.datasource.jdbc.max-size=8
+%prod.quarkus.datasource.jdbc.min-size=2
 
 quarkus.log.category."org.seasar.doma.jdbc.LogKind.SQL".min-level=DEBUG
 quarkus.log.category."org.seasar.doma.jdbc.LogKind.SQL".level=DEBUG
