--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,18 +8,8 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
-    services:
-      postgres:
-        image: postgres:10.16
-        env:
-          POSTGRES_USER: quarkus_test
-          POSTGRES_PASSWORD: quarkus_test
-          POSTGRES_DB: quarkus_test
-        ports:
-          - 127.0.0.1:5432:5432
+    timeout-minutes: 15
 
     steps:
     - uses: actions/checkout@v2
@@ -28,14 +18,17 @@ jobs:
       with:
         distribution: 'zulu'
         java-version: 11
+
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+
     - name: Grant execute permission for mvnw
       run: chmod +x mvnw
     - name: Build with Maven
       run: ./mvnw -B package --file pom.xml
+
     - name: Upload reports
       if: failure()
       uses: actions/upload-artifact@v2
