--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,11 +13,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up JDK 11
+    - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
-        distribution: 'zulu'
-        java-version: 11
+        distribution: temurin
+        java-version: 17
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
